Fix/Pokemon text overflowing

--- a/estilo.css
+++ b/estilo.css
@@ -3,21 +3,25 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 body {
     text-align: center;
     background: linear-gradient(to bottom, rgb(75, 150, 248), #d6feff);
     min-height: 100vh;
 }
+
 main {
     display: inline-block;
     margin-top: 2%;
     padding: 15px;
     position: relative;
 }
+
 .pokedex {
     width: 100%;
     max-width: 425px;
 }
+
 .pokemon {
     position: absolute;
     bottom: 55%;
@@ -25,28 +29,42 @@ main {
     transform: translate(-63%, 20%);
     height: 18%;
 }
+
 .pokemon__data {
+    width: 53%;
+    height: 6.5%;
     position: absolute;
     font-weight: 600;
     color: #aaa;
-    top: 54.5%;
-    right: 26%;
-    font-size: clamp(8px, 5vw, 22px);
+    top: 54%;
+    left: 23%;
+    font-size: 120%;
+    overflow: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
+
+.pokemon__data::-webkit-scrollbar {
+    display: none;
+}
+
 .pokemon__name {
     color: #3a444d;
     text-transform: capitalize;
 }
+
 .form {
     position: absolute;
     width: 65%;
     top: 65%;
     left: 13.5%;
 }
+
 .autocomplete {
     position: relative;
     display: inline-block;
 }
+
 .autocomplete-items {
     position: absolute;
     border: 1px solid #d4d4d4;
@@ -57,24 +75,27 @@ main {
     top: 100%;
     left: 0;
     right: 0;
-  }
-  .autocomplete-items div {
+}
+
+.autocomplete-items div {
     padding: 10px;
     cursor: pointer;
     background-color: #fff;
     border-bottom: 1px solid #d4d4d4;
-  }
-  .autocomplete-items div:hover {
+}
+
+.autocomplete-items div:hover {
     /*when hovering an item:*/
     background-color: #e9e9e9;
-  }
-  .autocomplete-active {
+}
+
+.autocomplete-active {
     /*when navigating through the items using the arrow keys:*/
     background-color: DodgerBlue !important;
     color: #ffffff;
-  }
+}
 
-.input__search{
+.input__search {
     width: 100%;
     padding: 4%;
     outline: none;
@@ -95,6 +116,7 @@ main {
     display: flex;
     gap: 20px;
 }
+
 .button {
     width: 50%;
     padding: 4%;
@@ -106,6 +128,7 @@ main {
     background-color: #444;
     box-shadow: -2px 3px 0 #222, -4px 6px 0 #000;
 }
+
 .button:active {
     box-shadow: inset -4px 4px 0 #222;
     font-size: 0.9rem;
